changing gts to cxo

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: GSO GTS 2023 Phuket
+site_name: APJ CX 2023 Phuket
 site_url: https://github.com/nutanix-japan/gsolanding
 site_author: Lakshmi Balaramane
 
