--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -95,9 +95,9 @@ plugins:
 nav:
     - 'Overview': index.md
     - 'Agenda': 
-      - 'Day Agenda': daily_agenda/general_agenda.md
+      - 'General Event Agenda': daily_agenda/general_agenda.md
       - 'Breakouts and Labs Agenda': daily_agenda/breakout_and_lab_agenda.md
-      - 'Managers Agenda': daily_agenda/managers_agenda.md
+      - 'Managers Meeting Agenda': daily_agenda/managers_agenda.md
     - 'Labs Information': gts_labs/gts_labs.md
     - 'Cluster Lookup': cluster_lookup/cluster_lookup.md
     - 'Code of Conduct': code_conduct/code_conduct.md
